<resources>
    <string name="app_name" translatable="false">Birdie</string>
    <string name="menu_start">Start</string>
    <string name="shop">Shop</string>
    <string name="menu_language">Change language</string>
    <string name="menu_exit">Exit</string>
    <string name="press_to_start">Press to start</string>
    <string name="press_to_continue">Press to continue</string>
    <string name="pause">Pause</string>
    <string name="continue_game">Continue</string>
    <string name="back">Back</string>
    <string name="to_menu">Exit to menu</string>
    <string name="company" translatable="false">Codemitry</string>
    <string name="lose">You lost. Try again?</string>
    <string name="best_lose">You set the best score! \n Start again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="best_score">The best score: </string>
    <string name="your_score">Your score: </string>
    <string name="sure_to_reset">Are you sure to reset the statistics? \n The best score will be erased too</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset all statistics</string>
    <string name="enable_left_handed_mode">Enable left-handed mode</string>
    <string name="enable_right_handed_mode">Enable right-handed mode</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="disable_vibration">Disable vibration</string>
    <string name="statistics">Statistics</string>
    <string name="deaths">Quantity of deaths: </string>
    <string name="ground_deaths">by ground: </string>
    <string name="column_deaths">by column: </string>
    <string name="total_score">Total score: </string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="google_play_sign">Google Play Sign-In</string>
    <string name="buy">Buy</string>
    <string name="select">Apply</string>
    <string name="selected">Selected</string>
    <string name="first_texture">Dungeon</string>
    <string name="second_texture">Field</string>
    <string name="sure_to_buy">Are you sure to buy this texture?</string>
    <string name="will_cost">It will cost for you </string>
    <string name="no_money">You have just no </string>

</resources>
