<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".StatisticsActivity">

    <TextView
        android:id="@+id/statisticsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:shadowColor="@android:color/holo_orange_dark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/statistics"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/stat_back"
        app:layout_constraintTop_toBottomOf="@id/statisticsText"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stat_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:textColor="@color/text_color"
                android:textSize="26sp"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="121dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/menu_button_not_pressed"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="610dp" />

            <TextView
                android:id="@+id/stat_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/deaths"
                android:textColor="@color/text_color"
                android:textSize="26sp"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="121dp" />

            <TextView
                android:id="@+id/stat_ground_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/ground_deaths"
                android:textColor="@color/text_color"
                android:textSize="26sp"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="121dp" />

            <TextView
                android:id="@+id/stat_column_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/column_deaths"
                android:textColor="@color/text_color"
                android:textSize="26sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/menu_button_not_pressed" />

            <TextView
                android:id="@+id/stat_total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_score"
                android:textColor="@color/text_color"
                android:textSize="26sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/menu_button_not_pressed" />

            <!--            <View-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:layout_marginStart="30dp"-->
            <!--                android:background="@color/menu_button_not_pressed"-->
            <!--                tools:layout_editor_absoluteX="1dp"-->
            <!--                tools:layout_editor_absoluteY="610dp" />-->
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/stat_back"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:onClick="onBackClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>