<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#99000000"
    tools:context="com.codemitry.birdie.LoseActivity">

    <FrameLayout
        android:id="@+id/container_pop_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/your_score"
        android:textAlignment="center"
        android:textColor="@color/score"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@+id/bestScore"
        tools:layout_editor_absoluteX="122dp" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/best_score"
        android:textAlignment="center"
        android:textColor="@color/score"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="122dp" />

    <Button
        android:id="@+id/loseNo"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@drawable/buttons_lose_dialog"
        android:gravity="center"
        android:onClick="onNoClick"
        android:text="@string/no"
        android:textColor="@drawable/menu_text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loseYes"
        app:layout_constraintTop_toBottomOf="@+id/loseText" />

    <TextView
        android:id="@+id/loseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lose"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="122dp" />

    <Button
        android:id="@+id/loseYes"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:background="@drawable/buttons_lose_dialog"
        android:gravity="center"
        android:onClick="onYesClick"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textColor="@drawable/menu_text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loseNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loseText" />

    <View
        android:id="@+id/divider"
        android:layout_width="377dp"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/menu_button_not_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourScore" />

</androidx.constraintlayout.widget.ConstraintLayout>