<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_back"
    tools:context="com.codemitry.birdie.MainActivity">

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/menu_buttons_color"
        android:onClick="onExitClick"
        android:text="@string/menu_exit"
        android:textColor="@drawable/menu_text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/menu_buttons_color"
        android:onClick="onSettingsClick"
        android:text="@string/settings"
        android:textColor="@drawable/menu_text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_img"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/menu_buttons_color"
        android:onClick="onStartClick"
        android:text="@string/menu_start"
        android:textColor="@drawable/menu_text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="15dp"
        android:alpha="100"
        android:gravity="center_horizontal"
        android:text="@string/company"
        android:textColor="@color/menu_button_not_pressed"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="147dp"
        android:fontFamily="cursive"
        android:text="Birdie"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#81C784"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:onClick="onLogoClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>